2005-08-11  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: More work on it.
	* src/MapView.py: New View showing locations on a map. Early unfinished version.
	* src/gramps_main.py: Enable MapView
	* src/land_shallow_topo_2048.jpg:
	* src/land_shallow_topo_350.jpg: Two new map images downloaded from NASA
	so the are assumed to be public domain.

2005-08-10  Don Allingham  <don@gramps-project.org>
	* src/DbState.py: separate database class from display class
	* src/EditPerson.py: separate database class from display class
	* src/GrampsDbBase.py: separate database class from display class
	* src/PageView.py: separate database class from display class
	* src/PedView.py: separate database class from display class
	* src/PersonView.py: separate database class from display class
	* src/RelLib.py: separate database class from display class
	* src/ViewManager.py: separate database class from display class
	* src/gramps_main.py: separate database class from display class
	* src/Navigation.py: provides navigation ability for the history menu
	
2005-08-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Better autoscaling; better ui management

2005-08-09  Don Allingham  <don@gramps-project.org>
	* src/ScratchPad.py: added
	* src/stock_link.png: added
	* src/DbState.py: better ui management, history management
	* src/EditPerson.py: better ui management
	* src/GrampsDbBase.py: better ui management
	* src/PageView.py: better ui management
	* src/PersonView.py: better ui management, history management
	* src/ViewManager.py: better ui management

2005-08-09  Alex Roitman  <shura@gramps-project.org>
	* src/const.py.in: Remove obsolete constants.

2005-08-09  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DbState.py: change_active_person now emits the signal,
 	change_active_handle is only a wrapper for that.
	* src/PageView.py (get_stock): Work around not existing definition
	of gtk.STOCK_MEDIA_MISSING by using gtk.STOCK_MISSING_IMAGE.